[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/scripts/worldEngine/fauna/butterfly.gd" type="Script" id=1]
[ext_resource path="res://assets/worldEngine/fauna/butterflyFire.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "butterflyFlap"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("leftWing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 2, 0.5, 2, 0.5, 1 ),
"update": 0,
"values": [ Vector3( -30, 1.44596e-06, -90 ), Vector3( -5.72205e-06, 1.44596e-06, -90 ), Vector3( 30, 1.44596e-06, -90 ), Vector3( -5.72205e-06, 1.44596e-06, -90 ), Vector3( -30, 1.44596e-06, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rightWing:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 2, 0.5, 2, 0.5, 1 ),
"update": 0,
"values": [ Vector3( 30, -1.44596e-06, -90 ), Vector3( 1.90735e-06, -1.44596e-06, -90 ), Vector3( -30, -1.44596e-06, -90 ), Vector3( 1.90735e-06, -1.44596e-06, -90 ), Vector3( 30, -1.44596e-06, -90 ) ]
}

[node name="butterfly" type="Spatial"]
script = ExtResource( 1 )

[node name="body" type="Spatial" parent="."]

[node name="rightCheck" type="RayCast" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
enabled = true
cast_to = Vector3( 3, 0, 1 )

[node name="leftCheck" type="RayCast" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
enabled = true
cast_to = Vector3( 3, 0, -1 )

[node name="changeAim" type="Timer" parent="body"]
autostart = true

[node name="leftWing" type="Spatial" parent="body"]
transform = Transform( -3.1093e-08, 1, 2.18557e-08, -0.866025, -3.78552e-08, 0.5, 0.5, -3.38107e-09, 0.866025, 0.11, 0.151238, 0 )

[node name="wingImg" type="Sprite3D" parent="body/leftWing"]
transform = Transform( 0, -4.37114e-08, -1, -4.37114e-08, 1, -4.37114e-08, 1, 4.37114e-08, 0, 0, -0.06, -0.08 )
transparent = false
alpha_cut = 1
texture = ExtResource( 2 )

[node name="rightWing" type="Spatial" parent="body"]
transform = Transform( -3.1093e-08, 1, -2.18557e-08, -0.866025, -3.78552e-08, -0.5, -0.5, 3.38107e-09, 0.866025, 0.11, 0.151238, 0 )

[node name="wingImg" type="Sprite3D" parent="body/rightWing"]
transform = Transform( -4.37114e-08, -4.37114e-08, 1, -4.37114e-08, 1, 4.37114e-08, -1, -4.37114e-08, -4.37114e-08, 0, -0.06, 0.08 )
transparent = false
alpha_cut = 1
texture = ExtResource( 2 )

[node name="flapAnim" type="AnimationPlayer" parent="body"]
autoplay = "butterflyFlap"
playback_speed = 1.5
anims/butterflyFlap = SubResource( 1 )

[connection signal="timeout" from="body/changeAim" to="." method="_on_changeAim_timeout"]
